--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
     <div class="site-navigation">
 
-      <p><strong>Site Map</strong></p>
+      <p><strong>Site map</strong></p>
       <ul class="pages">
 				{% include nav_links.html %}
       </ul>
@@ -38,7 +38,8 @@
     </div>
 
     <div class="site-signature">
-      <p class="rss-subscribe text"><strong>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></strong></p>
+      <!-- <p class="rss-subscribe text"><strong>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></strong></p>
+      -->
       <p class="text">{{ site.description }}</p>
     </div>
 
